# rust

pr1/: Cargo.toml
pr1/src/: main.rs
pr2/: Cargo.toml
pr2/src/: calculator.rs  main.rs
pr3/: Cargo.toml  tasks.csv  users.csv
pr3/src/: main.rs  todolist.rs
pr4/: Cargo.toml  chat.db  schema.sql
pr4/.sqlx/: query-27eee48d67f4b54cdcae2aa2b684228c95eadc25a8cb8a3811e1f9f50b746449.json  query-78ecd3bc5a999dc227a86556f0ce41065974104b735d96b3c5785480023bb60a.json  query-98f4c0bfff04e07f5d0a46d48a31d24655826eebdf09c7f9f45d770df02035d3.json  query-99261a9af86ab0172a7bf243a33449e08f10cfd67f475949a293ba753c392b7f.json  query-f883226d2709310f325c9f315704c65a992e038cba959c70605bf6aa08e59fcd.json
pr4/src/: main.rs
pr4/static/: index.html
